--- a/src/components/VideoGrid/video-grid.css
+++ b/src/components/VideoGrid/video-grid.css
@@ -63,11 +63,15 @@
 
 .videos.small-mode{
     grid-template-columns: 1fr;
+    
 
 }
 
 .videos.small-mode .video{
-    grid-template-columns: 1fr 1.4fr;
+    grid-template-columns: 180px 1fr;
+    margin-bottom: 0;
+    grid-gap: 20px;
+
 }
 
 .videos.small-mode .thumbnail{
